--- a/VTI Final Proj/VTI index.html
+++ b/VTI Final Proj/VTI index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\Nathaniel Williams\Documents\VTI Final Proj\css\main1.scss">
+    <link rel="stylesheet" href="C:\Users\Nathaniel Williams\Documents\VTI Final Proj\css\main1.css">
 <main>
     <nav class="navbar">
-      <div class="menu">
-        <a href="#">Featured</a> 
-        <a href="#">Movie</a> 
-        <a href="#">Community</a>
+      <h1>Movie</h1>
       </div>
       <div class="">
         <div>
@@ -23,48 +20,48 @@
     <div class="movie-card">
       <div class="poster-wrapper">
         <div class="poster">
-          <img src="https://images-na.ssl-images-amazon.com/images/I/81r60zJ90SL._AC_SL1500_.jpg" alt="poster" />
+          <img src="image/Sonic 2.jpg" alt="poster" />
           <div class="release-date">
             <h2>30</h2>
             <div class="divider"></div>
             <p>NOV 2020</p>
           </div>
-          <div class="btn-play">&#9655;</div>
+         
         </div>
       </div>
       <!-- end poster-wrapper -->
       <div class="movie-info">
         <div class="header-section">
-          <h2>SPEED RACER</h2>
+          <h2>Sonic the Hedgehog</h2>
           <!--whatever categories the movie is-->
-          <p> / American / English / 2008 / 2h15m</p>
+          <p> / American / English / 2020 / 1h40m</p>
           <div class="extra">
-            <div class="ratings"><p>	&#9733; &#9733; &#9733; &#9733;	&#9734; 8.0</p></div>
+            <div class="ratings"><p>	&#9733; &#9733; &#9733; &#9733;	&#9734; 4.7</p></div>
           </div>
         </div>
         <div class="cast-section">
           <h3>THE CAST</h3>
           <div class="casts">
-            <img src="image/Speed1.jpg" alt="avatar" />
-            <img src="image/Christina_Ricci_by_David_Shankbone.jpg" alt="avatar" />
-            <img src="image/Speed2.jpg" alt="avatar" />
-            <img src="image/Speed3.jpg" alt="avatar" />
+<p>Ben Schwartz as Sonic</p>
+<p>Benjamin L. Valic as young Sonic</p>
+<p>Jim Carrey as Dr. Robotnik</p>
+<p>James Marsden as Tom Wachowski</p>
+<p>Tika Sumpter as Maddie Wachowski</p>
+<p>Natasha Rothwell as Rachel</p>
+<p>Melody Nosipho as Jojo</p>
+<p>Adam Pally as Wade Whipple</p>
+<p>Neal McDonough as Major Bennington</p>
+<p>Tom Butler as Commander Walters</p>
+<p>Frank C. Turner as Crazy Carl</p>
           </div>
         </div>
         <div class="synopsis-section">
-          <h3>SYNOPSIS</h3>
+          <h4>SYNOPSIS</h4>
           <p>
-            Born into a family business of race cars, Speed Racer (Emile Hirsch) is one of the track's hot stars. Sitting at the wheel of his Mach 5, he consistently deflates the competition. When Speed turns down an offer from the head of Royalton Industries, he uncovers a secret. Powerful moguls fix the races to boost profits. Hoping to beat the executive, Speed enters the same arduous cross-country race that killed his brother.
-
+            The world needed a hero -- it got a hedgehog. Powered with incredible speed, Sonic embraces his new home on Earth -- until he accidentally knocks out the power grid, sparking the attention of uncool evil genius Dr. Robotnik. Now, it's supervillain vs. supersonic in an all-out race across the globe to stop Robotnik from using Sonic's unique power to achieve world domination.
           </p>
         </div>
-        <div class="gallery-section">
-          <h3>VIDEO / PICTURE</h3>
-          <div class="gallery">
-            <div class="small"><img src="image/Speed.jpg" alt="media" /></div>
-            <div class="medium"><img src="image/speed-racer-2000-1.jpg" alt="media" /></div>
-            <div class="small"><img src="image/speed-racer-3.jpg" alt="media" /></div>
-          </div>
+
         </div>
       </div>
     </div>
