--- a/VTI Final Proj/VTI index.html
+++ b/VTI Final Proj/VTI index.html
@@ -21,11 +21,6 @@
       <div class="poster-wrapper">
         <div class="poster">
           <img src="image/Sonic 2.jpg" alt="poster" />
-          <div class="release-date">
-            <h2>30</h2>
-            <div class="divider"></div>
-            <p>NOV 2020</p>
-          </div>
          
         </div>
       </div>
@@ -37,6 +32,9 @@
           <p> / American / English / 2020 / 1h40m</p>
           <div class="extra">
             <div class="ratings"><p>	&#9733; &#9733; &#9733; &#9733;	&#9734; 4.7</p></div>
+            <p>Tue: 5:30, Thr: 7:30, Sat: 9:30</p>
+            <p>Ticket Price: $1500 <button>Buy</button></p>
+            <p>Seating: Far back</p>
           </div>
         </div>
         <div class="cast-section">
