--- a/VTI Final Proj/VTI index.html
+++ b/VTI Final Proj/VTI index.html
@@ -20,18 +20,18 @@
     <div class="movie-card">
       <div class="poster-wrapper">
         <div class="poster">
-          <img src="image/Sonic 2.jpg" alt="poster" />
+          <img src="image/Pretoria.jpg" alt="poster" />
          
         </div>
       </div>
       <!-- end poster-wrapper -->
       <div class="movie-info">
         <div class="header-section">
-          <h2>Sonic the Hedgehog</h2>
+          <h2>Escape from Pretoria</h2>
           <!--whatever categories the movie is-->
-          <p> / American / English / 2020 / 1h40m</p>
+          <p> / English / 2020 / 1h46m</p>
           <div class="extra">
-            <div class="ratings"><p>	&#9733; &#9733; &#9733; &#9733;	&#9734; 4.7</p></div>
+            <div class="ratings"><p>	&#9733; &#9733; &#9733; &#9733;	&#9734; 4.6</p></div>
             <p>Tue: 5:30, Thr: 7:30, Sat: 9:30</p>
             <p>Ticket Price: $1500 <button>Buy</button></p>
             <p>Seating: Far back</p>
@@ -40,23 +40,18 @@
         <div class="cast-section">
           <h3>THE CAST</h3>
           <div class="casts">
-<p>Ben Schwartz as Sonic</p>
-<p>Benjamin L. Valic as young Sonic</p>
-<p>Jim Carrey as Dr. Robotnik</p>
-<p>James Marsden as Tom Wachowski</p>
-<p>Tika Sumpter as Maddie Wachowski</p>
-<p>Natasha Rothwell as Rachel</p>
-<p>Melody Nosipho as Jojo</p>
-<p>Adam Pally as Wade Whipple</p>
-<p>Neal McDonough as Major Bennington</p>
-<p>Tom Butler as Commander Walters</p>
-<p>Frank C. Turner as Crazy Carl</p>
+<p>Daniel Radcliffe as Tim Jenkin</p>
+<p>Mark Leonard Winter as Leonard Fontaine</p>
+<p>Daniel Webber as Stephen Lee</p>
+<p>Ian Hart as Denis Goldberg</p>
+<p>Adam Ovadia as Van Zadelhoff</p>
+
           </div>
         </div>
         <div class="synopsis-section">
           <h4>SYNOPSIS</h4>
           <p>
-            The world needed a hero -- it got a hedgehog. Powered with incredible speed, Sonic embraces his new home on Earth -- until he accidentally knocks out the power grid, sparking the attention of uncool evil genius Dr. Robotnik. Now, it's supervillain vs. supersonic in an all-out race across the globe to stop Robotnik from using Sonic's unique power to achieve world domination.
+            Two white South Africans, imprisoned for working on behalf of the African National Congress, are determined to escape from the notorious Pretoria Prison.
           </p>
         </div>
 
