--- a/VTI Final Proj/Pop movies.html
+++ b/VTI Final Proj/Pop movies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="C:\Users\Nathaniel Williams\Documents\VTI Final Proj\css\style.css">
     <title>Popular Movies</title>
 </head>
 <body>
@@ -13,10 +13,13 @@
 <div class="col-md-4">
     <div class="row">
         <div class="col-6"><img src="image/Bad_Boys_for_Life_poster.jpg"></div>
-        <div class="col-6"><img src="image/Dolittle_%282020_film_poster%29.jpg"></div>
+        <div class="col-6"><img src="image/Dolittle_(2020_film_poster).png"></div>
         <div class="col-6"><img src="image/Mulan_%282020_film%29_poster.jpg"></div>
         <div class="col-6"><img src="image/Scooby.jpg"></div>
         <div class="col-6"><img src="image/Sonic_the_Hedgehog_poster.jpg"></div>
+        <div class="col-6"><img src="image/Speed_racer_ver5_xlg.jpg"><link rel="stylesheet" href="C:\Users\Nathaniel Williams\Documents\VTI Final Proj\VTI index.html"></div>
+        
+
     </div>
     </div>
 </div>
