--- a/VTI Final Proj/Pop movies.html
+++ b/VTI Final Proj/Pop movies.html
@@ -12,11 +12,11 @@
 <div class="row">
 <div class="col-md-4">
     <div class="row">
-        <div class="col-6"><img src="image/Bad_Boys_for_Life_poster.jpg"></div>
-        <div class="col-6"><img src="image/Dolittle_(2020_film_poster).png"></div>
-        <div class="col-6"><img src="image/Mulan_%282020_film%29_poster.jpg"></div>
-        <div class="col-6"><img src="image/Scooby.jpg"></div>
-        <div class="col-6"><img src="image/Sonic_the_Hedgehog_poster.jpg"></div>
+        <div class="col-6"><a href="C:\Users\admin\Downloads\ICT-Final-Proj\VTI Final Proj\synopsis.php.html\bad_boys.php.html"><img src="image/Bad_Boys_for_Life_poster.jpg"></a></div>
+        <div class="col-6"><a href="C:\Users\admin\Downloads\ICT-Final-Proj\VTI Final Proj\synopsis.php.html\dolittle.php.html"><img src="image/Dolittle_(2020_film_poster).png"></a></div>
+        <div class="col-6"><a href="C:\Users\admin\Downloads\ICT-Final-Proj\VTI Final Proj\synopsis.php.html\mulan.php.html"><img src="image/Mulan_%282020_film%29_poster.jpg"></a></div>
+        <div class="col-6"><a href="C:\Users\admin\Downloads\ICT-Final-Proj\VTI Final Proj\synopsis.php.html\scooby.php.html"><img src="image/Scooby.jpg"></a></div>
+        <div class="col-6"><a href="C:\Users\admin\Downloads\ICT-Final-Proj\VTI Final Proj\synopsis.php.html\sonic.php.html"><img src="image/Sonic_the_Hedgehog_poster.jpg"></a></div>
         <div class="col-6"><img src="image/Speed_racer_ver5_xlg.jpg"><link rel="stylesheet" href="C:\Users\Nathaniel Williams\Documents\VTI Final Proj\VTI index.html"></div>
         
 
