--- a/VTI Final Proj/synopsis.php.html/bad_boys.php.html
+++ b/VTI Final Proj/synopsis.php.html/bad_boys.php.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bad Boys For Life</title>
-    <link href="C:\xampp\htdocs\ICT-Final-Proj\synopsis.php.html\synopsis_main.css" rel="stylesheet" type="text/css">
+    <link href="C:\Users\admin\Downloads\ICT-Final-Proj\VTI Final Proj\synopsis.php.html\synopsis_main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class="left_container"> <img class="image_size" src="C:\xampp\htdocs\ICT-Final-Proj\VTI%20Final%20Proj\image\Bad_Boys_for_Life_poster.jpg">
+    <div class="left_container"> <img class="image_size" src="C:\Users\admin\Downloads\ICT-Final-Proj\VTI Final Proj\image\Bad_Boys_for_Life_poster.jpg">
     <div class="view_info">
         <h4>Monday: 4:00 pm , Wednesday: 6:00 pm</h4>
         <h4>Ticket Price: $1500</h4>
