--- a/VTI Final Proj/synopsis.php.html/dolittle.php.html
+++ b/VTI Final Proj/synopsis.php.html/dolittle.php.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dolittle</title>
-    <link href="C:\xampp\htdocs\ICT-Final-Proj\synopsis.php.html\synopsis_main.css" rel="stylesheet" type="text/css">
+    <link href="C:\Users\admin\Downloads\ICT-Final-Proj\VTI Final Proj\synopsis.php.html\synopsis_main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div class="left_container"> <img class="image_size" src="image/Dolittle_%282020_film_poster%29.jpg">
+    <div class="left_container"> <img class="image_size" src="C:\Users\admin\Downloads\ICT-Final-Proj\VTI Final Proj\image\Dolittle_(2020_film_poster).png">
         <div class="view_info">
             <h4>Monday: 2:30 pm , Wednesday: 4:30 pm</h4>
             <h4>Ticket Price: $1500</h4>
